api works with modules, removed unecessary code from build.gradle