@@ -15,8 +15,9 @@ plugins {
 
 group 'com.squedgy.mc-mod-manager'
 version = this.properties.version
-
 subprojects {
+
+	ext.moduleName = project.properties.moduleName
 
 	apply plugin: 'java'
 	apply plugin: 'idea'
@@ -27,30 +28,75 @@ subprojects {
 		mavenCentral()
 	}
 
-	dependencyManagement {
-		imports {
-			mavenBom 'org.apache.logging.log4j:log4j-bom:2.11.1'
+	dependencies {
+		//JUnit 4 for testing
+		testCompile group: 'junit', name: 'junit', version: '4.12'
+		//JSON config requires jackson
+		implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
+		implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+		//SLF4J for logging purposes
+		implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta4'
+		implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha4'
+		implementation group: 'com.squedgy', name: 'my-utilities', version: '1.0'
+	}
+
+	def moduleExists = {
+		def check = moduleName
+		logger.lifecycle('moduleName: ' + check)
+		logger.lifecycle('moduleExists: ' + (check != null && check != ''))
+		return check != null && check != ''
+	}
+
+	compileJava {
+		if(!moduleExists()) {
+			throw new IllegalArgumentException("Module Name is NOT declared in properties for " + project.name)
+		}
+		inputs.property("moduleName", moduleName)
+		doFirst {
+			options.compilerArgs = [
+			    '--module-path', classpath.asPath,
+			]
+			classpath = files()
 		}
 	}
 
-	dependencies {
-		//JUnit 5 for testing
-		testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'
-		//JSON config requires jackson
-		compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.7'
-		compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.7'
-		//SLF4J for logging purposes when i get around to it
-		implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
-		implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+	compileTestJava {
+		if(!moduleExists()) {
+			throw new IllegalArgumentException("Module Name is NOT declared in properties")
+		}
+		inputs.property('moduleName', moduleName)
+		doFirst {
+			options.compilerArgs = [
+			    '--module-path' , classpath.asPath,
+				'--add-modules', 'junit',
+				'--add-reads', "${moduleName}=junit",
+				'--patch-module', "${moduleName}=${files(sourceSets.test.java.srcDirs).asPath}"
+			]
+			classpath = files()
+		}
+	}
 
-//		compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
-//		compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
+	test {
+//		useJUnit()
+		if(!moduleExists()) {
+			throw new IllegalArgumentException("Module Name is NOT declared in properties")
+		}
+		inputs.property("moduleName", moduleName)
+		doFirst {
+			jvmArgs = [
+				'--module-path', classpath.asPath,
+				'--add-modules', 'ALL-MODULE-PATH',
+				'--add-reads', "$moduleName=junit",
+				'--patch-module', "$moduleName=${files(sourceSets.test.java.outputDir).asPath}:${project.buildDir.toPath().resolve("resources").resolve("test").toAbsolutePath()}"
+			]
+			classpath = files()
+		}
 	}
 
 	group 'com.squedgy.mc-mod-manager'
 	version = this.properties.version
-	sourceCompatibility = 1.8
-	targetCompatibility = 1.8
+	sourceCompatibility = 1.12
+	targetCompatibility = 1.12
 
 	assemble{
 		dependsOn 'clean'
@@ -58,6 +104,7 @@ subprojects {
 
 	jar {
 		manifest.attributes provider: 'gradle'
+		manifest.attributes ('Automatic-Module-Name': '')
 		baseName = project.name + '-mmm'
 		version = version
 	}
